<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/base"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/navbar"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/favicon" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navbar"
        app:layout_constraintVertical_bias="1.0"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/pulls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/pulls_text"
            android:layout_marginVertical="20dp"
            android:textColor="@color/text"/>
        <Button
            android:id="@+id/main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:height="200dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@null"
            android:text="@string/button"
            android:textColor="@color/text"
            android:textAllCaps="false"/>
        <LinearLayout
            android:id="@+id/main_character"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:visibility="gone"
            android:gravity="end|bottom">
            <ImageView
                android:contentDescription="@string/image_desc"
                android:scaleType="centerCrop"
                android:id="@+id/character_pfp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/rounded2"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/character_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/text"/>
                <TextView
                    android:id="@+id/anime_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/subtext0"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/rerroll"
            android:layout_width="wrap_content"
            android:paddingHorizontal="20dp"
            android:layout_height="40dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/rounded3"
            android:textColor="@color/text"
            android:text="@string/rerroll"
            android:visibility="gone"
            android:textAllCaps="false"/>
    </LinearLayout>
    <LinearLayout
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
    android:gravity="center">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collection"
        android:textColor="@color/text" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
            android:layout_marginHorizontal="40dp"
        android:textColor="@color/text" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/text" />
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
